--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>星瞻</title>
     <link rel="icon" href="static/image/index-second-logo.icon" type="image/x-icon">
     <link rel="stylesheet" href="static/css/swiper.min.css">
-    <link rel="stylesheet" href="static/css/index2.min.css?t=22">
+    <link rel="stylesheet" href="static/css/index.min.css?t=23">
 
 </head>
 
@@ -39,6 +39,7 @@
 <!--                        <div class="line"></div>-->
 <!--                    </a>-->
                 </div>
+                <div></div>
             </div>
         </div>
 
@@ -181,6 +182,96 @@
                 </div>
             </div>
         </div>
+        <footer class="links-container">
+            <div class="links-container-box">
+              <ul class="links-list">
+                <li class="links-item">
+                  <span class="links-title">产品</span>
+                  <a
+                    href="http://81.71.98.26"
+                    target="_blank"
+                    >DeepFlow Enterprise</a
+                  >
+                  <a href="http://81.71.98.26" target="_blank"
+                    >DeepFlow Cloud</a
+                  >
+                </li>
+                <li class="links-item">
+                  <span class="links-title">DeepFlow Enterprise 解决方案</span>
+                  <a
+                    href="http://81.71.98.26"
+                    target="_blank"
+                    >NPB 混合云全网流量采集与分发</a
+                  >
+                  <a
+                    href="http://81.71.98.26"
+                    target="_blank"
+                    >NPMD 混合云网络监控诊断</a
+                  >
+                  <a
+                    href="http://81.71.98.26"
+                    target="_blank"
+                    >5G 核心网网络功能服务监控</a
+                  >
+                  <a
+                    href="http://81.71.98.26"
+                    target="_blank"
+                    >容器化微服务可观测性方案</a
+                  >
+                </li>
+                <li class="links-item">
+                  <span class="links-title">DeepFlow Enterprise 案例学习</span>
+                  <a
+                    href="http://81.71.98.26"
+                    target="_blank"
+                    >客户案例</a
+                  >
+                  <a
+                    href="http://81.71.98.26"
+                    target="_blank"
+                    >阿里混合云网络监控实践</a
+                  >
+                  <a
+                    href="http://81.71.98.26"
+                    target="_blank"
+                    >腾讯金融行业云监控实践</a
+                  >
+                </li>
+                <li class="links-item">
+                  <span class="links-title">关于</span>
+                  <a
+                    href="http://81.71.98.26"
+                    target="_blank"
+                    >关于我们</a
+                  >
+                  <a
+                    href="http://81.71.98.26"
+                    target="_blank"
+                    >创始人</a
+                  >
+                  <a
+                    href="http://81.71.98.26"
+                    target="_blank"
+                    >投资者</a
+                  >
+                  <a
+                    href="http://81.71.98.26"
+                    target="_blank"
+                    >云杉历程</a
+                  >
+                  <a
+                    href="http://81.71.98.26"
+                    target="_blank"
+                    >联系我们</a
+                  >
+                </li>
+              </ul>
+              <p class="foot-content">
+                <span>Copyright© <span id="year">2025</span> YUNSHAN Networks</span
+                ><br /><span>(0086) 400-9696-121</span>
+              </p>
+            </div>
+          </footer>
     </div>
     <script src="static/js/vue.js"></script>
     <script>
