feat: modify image size

--- a/index.html
+++ b/index.html
@@ -186,83 +186,17 @@
               <ul class="links-list">
                 <li class="links-item">
                   <span class="links-title">产品</span>
-                  <a
-                    href="http://81.71.98.26"
-                    target="_blank"
-                    >DeepFlow Enterprise</a
-                  >
-                  <a href="http://81.71.98.26" target="_blank"
-                    >DeepFlow Cloud</a
-                  >
+                  <a href="http://81.71.98.26" target="_blank">Nova-Agent</a>
+                  <a href="http://81.71.98.26" target="_blank">WatcherMen</a>
                 </li>
                 <li class="links-item">
-                  <span class="links-title">DeepFlow Enterprise 解决方案</span>
-                  <a
-                    href="http://81.71.98.26"
-                    target="_blank"
-                    >NPB 混合云全网流量采集与分发</a
-                  >
-                  <a
-                    href="http://81.71.98.26"
-                    target="_blank"
-                    >NPMD 混合云网络监控诊断</a
-                  >
-                  <a
-                    href="http://81.71.98.26"
-                    target="_blank"
-                    >5G 核心网网络功能服务监控</a
-                  >
-                  <a
-                    href="http://81.71.98.26"
-                    target="_blank"
-                    >容器化微服务可观测性方案</a
-                  >
+
                 </li>
                 <li class="links-item">
-                  <span class="links-title">DeepFlow Enterprise 案例学习</span>
-                  <a
-                    href="http://81.71.98.26"
-                    target="_blank"
-                    >客户案例</a
-                  >
-                  <a
-                    href="http://81.71.98.26"
-                    target="_blank"
-                    >阿里混合云网络监控实践</a
-                  >
-                  <a
-                    href="http://81.71.98.26"
-                    target="_blank"
-                    >腾讯金融行业云监控实践</a
-                  >
+
                 </li>
                 <li class="links-item">
-                  <span class="links-title">关于</span>
-                  <a
-                    href="http://81.71.98.26"
-                    target="_blank"
-                    >关于我们</a
-                  >
-                  <a
-                    href="http://81.71.98.26"
-                    target="_blank"
-                    >创始人</a
-                  >
-                  <a
-                    href="http://81.71.98.26"
-                    target="_blank"
-                    >投资者</a
-                  >
-                  <a
-                    href="http://81.71.98.26"
-                    target="_blank"
-                    >云杉历程</a
-                  >
-                  <a
-                    href="http://81.71.98.26"
-                    target="_blank"
-                    >联系我们</a
-                  >
+
                 </li>
               </ul>
               <p class="foot-content">
