feat: compress image

--- a/index.html
+++ b/index.html
@@ -200,8 +200,8 @@
                 </li>
               </ul>
               <p class="foot-content">
-                <span>Copyright© <span id="year">2025</span> YUNSHAN Networks</span
-                ><br /><span>(0086) 400-9696-121</span>
+                <span>Copyright© <span id="year">2025</span> XINGGUAN Networks</span
+                ><br /><span>(0086) 16621086246</span>
               </p>
             </div>
           </footer>
